--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <label for="title">Title: </label>
     <input type="text" id="title" placeholder="Enter file title">
     <button id="download">Download</button>
+    <button id="print">Print</button>
     <br><br>
     <textarea id="notepad" rows="15" cols="50"></textarea>
     <button id="save">Save</button>
