--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <button id="download">Download</button>
     <button id="print">Print</button>
     <br><br>
+    <div id="tabs"></div>
+    <button id="new-tab">New Tab</button>
+    <button id="save-tabs">Save Tabs</button>
+    <button id="clear-tabs">Clear Tabs</button>
+    <br><br>
     <textarea id="notepad" rows="15" cols="50"></textarea>
     <button id="save">Save</button>
     <button id="clear">Clear</button>
