--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
     <h1>Neo Notepad</h1>
-    <label for="title">Title: </label>
-    <input type="text" id="title" placeholder="Enter file title">
-    <button id="download">Download</button>
+    <div id="tabs"></div>
+    <button id="new-tab">New Tab</button>
+    <button id="save-tabs">Save Tabs</button>
+    <button id="clear-tabs">Clear Tabs</button>
     <button id="print">Print</button>
     <br><br>
     <textarea id="notepad" rows="15" cols="50"></textarea>
-    <button id="save">Save</button>
-    <button id="clear">Clear</button>
     <script src="script.js"></script>
 </body>
 </html>
-
