--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button id="new-tab">New Tab</button>
     <button id="save-tabs">Save Tabs</button>
     <button id="clear-tabs">Clear Tabs</button>
+    <button id="download">Download</button>
     <button id="print">Print</button>
     <br><br>
     <textarea id="notepad" rows="15" cols="50"></textarea>
