--- a/index.html
+++ b/index.html
@@ -3,28 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neo Notepad</title>
-    <style>
-        /* Optional: add some styling to better organize the buttons and inputs */
-        #tabs > div {
-            display: inline-block;
-            margin-right: 10px;
-        }
-        textarea {
-            display: block;
-        }
-    </style>
+    <title>My Channel and Patreon</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Neo Notepad</h1>
-    <div id="tabs"></div>
-    <button id="new-tab">New Tab</button>
-    <button id="save-tabs">Save Tabs</button>
-    <button id="clear-tabs">Clear Tabs</button>
-    <button id="print">Print</button>
-    <button id="download">Download</button>
-    <br><br>
-    <textarea id="notepad" rows="15" cols="50"></textarea>
-    <script src="script.js"></script>
+    <div class="container">
+        <h1>Welcome to My Website! coolneo93.github.io</h1>
+        <p>Check out my YouTube channel and support me on Patreon:</p>
+        <div class="links">
+            <a href="https://www.youtube.com/channel/UCMpNR-mJKOaBbvUiZ_PM_KQ" target="_blank">
+                <button class="youtube">Visit My YouTube Channel</button>
+            </a>
+            <a href="https://www.patreon.com/TheKeyMaker" target="_blank">
+                <button class="patreon">Support Me on Patreon</button>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
