--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <a href="https://www.patreon.com/TheKeyMaker" target="_blank">
                 <button class="patreon">Support Me on Patreon</button>
             </a>
+            <div class="services">
+            <h2>Computer Building and Repair Services</h2>
+            <p>I offer custom computer building and repair services. Whether you need a new gaming rig, a powerful workstation, or just some help fixing your current setup, I'm here to help!</p>
+            <p>Contact me for more information and pricing.</p>
         </div>
     </div>
 </body>
