--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
             <h2>Computer Building and Repair Services</h2>
             <p>I offer custom computer building and repair services. Whether you need a new gaming rig, a powerful workstation, or just some help fixing your current setup, I'm here to help!</p>
             <p>Contact me for more information and pricing.</p>
+             </div>
+            <div class="contact">
+            <h2>Contact Me</h2>
+            <form action="mailto:coolneo93@protonmail.com" method="post" enctype="text/plain">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br>
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message" rows="4" required></textarea><br>
+                <input type="submit" value="Send">
+            </form>
+            <p>Or text me at: <a href="sms:503-989-3932">YOUR_PHONE_NUMBER</a></p>
         </div>
     </div>
 </body>
