--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <textarea id="message" name="message" rows="4" required></textarea><br>
                 <input type="submit" value="Send">
             </form>
-            <p>Or text me at: <a href="sms:503-989-3932">YOUR_PHONE_NUMBER</a></p>
+            <p>Or text me at: <a href="sms:503-989-3932">503-989-3932</a></p>
         </div>
     </div>
 </body>
