--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
         <div class="location">
             <h2>Find Me Here</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019683644558!2d144.96305791531095!3d-37.81362797975171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce6e0!2sMelbourne%20VIC%2C%20Australia!5e0!3m2!1sen!2sus!4v1586888239006!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/place/1045+Woodland+Ave,+Woodburn,+OR+97071/@45.1568773,-122.8878336,17z/data=!3m1!4b1!4m6!3m5!1s0x54955c5d4e4f509d:0x1ab2d598b33ad2d5!8m2!3d45.1568773!4d-122.8852587!16s%2Fg%2F11cpdfkrk2?entry=ttu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
 </body>
