--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
         <div class="location">
             <h2>Find Me Here</h2>
-            <iframe src="https://www.google.com/maps/place/1045+Woodland+Ave,+Woodburn,+OR+97071/@45.1568773,-122.8878336,17z/data=!3m1!4b1!4m6!3m5!1s0x54955c5d4e4f509d:0x1ab2d598b33ad2d5!8m2!3d45.1568773!4d-122.8852587!16s%2Fg%2F11cpdfkrk2?entry=ttu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/place/1045+Woodland+Ave,+Woodburn,+OR+97071/@45.1567508,-122.8849846,19.6z/data=!4m15!1m8!3m7!1s0x54955c5d4e4f509d:0x1ab2d598b33ad2d5!2s1045+Woodland+Ave,+Woodburn,+OR+97071!3b1!8m2!3d45.1568773!4d-122.8852587!16s%2Fg%2F11cpdfkrk2!3m5!1s0x54955c5d4e4f509d:0x1ab2d598b33ad2d5!8m2!3d45.1568773!4d-122.8852587!16s%2Fg%2F11cpdfkrk2?entry=ttu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
 </body>
