--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
         <div class="location">
             <h2>Find Me Here</h2>
-            <iframe src="https://www.google.com/maps/place/1045+Woodland+Ave,+Woodburn,+OR+97071/@45.1567508,-122.8849846,19.6z/data=!4m15!1m8!3m7!1s0x54955c5d4e4f509d:0x1ab2d598b33ad2d5!2s1045+Woodland+Ave,+Woodburn,+OR+97071!3b1!8m2!3d45.1568773!4d-122.8852587!16s%2Fg%2F11cpdfkrk2!3m5!1s0x54955c5d4e4f509d:0x1ab2d598b33ad2d5!8m2!3d45.1568773!4d-122.8852587!16s%2Fg%2F11cpdfkrk2?entry=ttu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d464.05428894642193!2d-122.88498459753394!3d45.15675084118658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54955c5d4e4f509d%3A0x1ab2d598b33ad2d5!2s1045%20Woodland%20Ave%2C%20Woodburn%2C%20OR%2097071!5e0!3m2!1sen!2sus!4v1715995836143!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
         </div>
     </div>
 </body>
