--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
              </div>
             <div class="services">
-            <h2>Computer Building and Repair Services</h2>
+            <h2>Josh PC Builds And Repairs</h2>
             <p>I offer custom computer building and repair services. Whether you need a new gaming rig, a powerful workstation, or just some help fixing your current setup, I'm here to help!</p>
             <p>Contact me for more information and pricing.</p>
              </div>
