--- a/index.html
+++ b/index.html
@@ -1,45 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Channel and Patreon</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Atari Style Space Invaders</title>
+  <style>
+    canvas {
+      background: black;
+      display: block;
+      margin: 0 auto;
+      touch-action: none;
+    }
+    #scoreBoard {
+      color: white;
+      text-align: center;
+      font-family: monospace;
+      font-size: 20px;
+      margin: 10px;
+    }
+    .touch-controls {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
+    }
+    .touch-button {
+      background: white;
+      color: black;
+      font-size: 20px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+    }
+    #soundToggle {
+      display: block;
+      margin: 10px auto;
+      font-size: 16px;
+      padding: 6px 12px;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to My Website! coolneo93.github.io</h1>
-        <p>Check out my YouTube channel and support me on Patreon:</p>
-        <div class="links">
-            <a href="https://www.youtube.com/channel/UCMpNR-mJKOaBbvUiZ_PM_KQ" target="_blank">
-                <button class="youtube">Visit My YouTube Channel</button>
-            </a>
-            <a href="https://www.patreon.com/TheKeyMaker" target="_blank">
-                <button class="patreon">Support Me on Patreon</button>
-            </a>
-             </div>
-            <div class="services">
-            <h2>Josh PC Builds And Repairs</h2>
-            <p>I offer custom computer building and repair services. Whether you need a new gaming rig, a powerful workstation, or just some help fixing your current setup, I'm here to help!</p>
-            <p>Contact me for more information and pricing.</p>
-             </div>
-            <div class="contact">
-            <h2>Contact Me</h2>
-            <form action="mailto:coolneo93@protonmail.com" method="post" enctype="text/plain">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required><br>
-                <label for="message">Message:</label><br>
-                <textarea id="message" name="message" rows="4" required></textarea><br>
-                <input type="submit" value="Send">
-            </form>
-            <p>Or text me at: <a href="sms:503-989-3932">503-989-3932</a></p>
-                </div>
-        <div class="location">
-            <h2>Find Me Here</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d464.05428894642193!2d-122.88498459753394!3d45.15675084118658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54955c5d4e4f509d%3A0x1ab2d598b33ad2d5!2s1045%20Woodland%20Ave%2C%20Woodburn%2C%20OR%2097071!5e0!3m2!1sen!2sus!4v1715995836143!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
-        </div>
-    </div>
+  <div id="scoreBoard">Score: 0 | Level: 1 | Lives: 3</div>
+  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <button id="soundToggle">Toggle Sound</button>
+  <div class="touch-controls">
+    <button class="touch-button" id="leftBtn">◀</button>
+    <button class="touch-button" id="fireBtn">⦿</button>
+    <button class="touch-button" id="rightBtn">▶</button>
+  </div>
+
+  <script>
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
+    const scoreBoard = document.getElementById("scoreBoard");
+    const leftBtn = document.getElementById("leftBtn");
+    const rightBtn = document.getElementById("rightBtn");
+    const fireBtn = document.getElementById("fireBtn");
+    const soundToggle = document.getElementById("soundToggle");
+
+    let score = 0;
+    let level = 1;
+    let lives = 3;
+    let gameOver = false;
+    let soundOn = true;
+
+    let ship = {
+      x: canvas.width / 2 - 20,
+      y: canvas.height - 40,
+      width: 40,
+      height: 20,
+      speed: 5,
+    };
+
+    let bullets = [];
+    let powerUps = [];
+    let enemies = [];
+    let keys = {};
+
+    let shootSound = new Audio("https://freesound.org/data/previews/331/331912_3248244-lq.mp3");
+    let hitSound = new Audio("https://freesound.org/data/previews/137/137060_2428254-lq.mp3");
+    let powerSound = new Audio("https://freesound.org/data/previews/341/341695_3248244-lq.mp3");
+
+    function createEnemies(rows, cols) {
+      enemies = [];
+      for (let i = 0; i < rows; i++) {
+        for (let j = 0; j < cols; j++) {
+          enemies.push({
+            x: 60 + j * 60,
+            y: 30 + i * 40,
+            width: 40,
+            height: 20,
+            alive: true,
+            type: i === 0 && j === Math.floor(cols / 2) ? 'boss' : 'normal'
+          });
+        }
+      }
+    }
+
+    function spawnPowerUp(x, y) {
+      powerUps.push({ x: x, y: y, width: 20, height: 20, type: "life" });
+    }
+
+    createEnemies(5, 10);
+
+    document.addEventListener("keydown", (e) => {
+      keys[e.key] = true;
+      if (e.key === " ") shoot();
+    });
+    document.addEventListener("keyup", (e) => delete keys[e.key]);
+
+    soundToggle.addEventListener("click", () => {
+      soundOn = !soundOn;
+      soundToggle.textContent = soundOn ? "Toggle Sound" : "Sound Off";
+    });
+
+    function shoot() {
+      bullets.push({ x: ship.x + ship.width / 2 - 2, y: ship.y, width: 4, height: 10 });
+      if (soundOn) {
+        shootSound.currentTime = 0;
+        shootSound.play();
+      }
+    }
+
+    leftBtn.addEventListener("touchstart", () => keys['ArrowLeft'] = true);
+    leftBtn.addEventListener("touchend", () => delete keys['ArrowLeft']);
+    rightBtn.addEventListener("touchstart", () => keys['ArrowRight'] = true);
+    rightBtn.addEventListener("touchend", () => delete keys['ArrowRight']);
+    fireBtn.addEventListener("touchstart", shoot);
+
+    function update() {
+      if (gameOver) return;
+
+      if (keys["ArrowLeft"] && ship.x > 0) ship.x -= ship.speed;
+      if (keys["ArrowRight"] && ship.x < canvas.width - ship.width) ship.x += ship.speed;
+
+      bullets = bullets.filter((b) => b.y > 0);
+      bullets.forEach((b) => (b.y -= 10));
+
+      powerUps.forEach((p) => p.y += 3);
+      powerUps = powerUps.filter(p => p.y < canvas.height);
+
+      powerUps.forEach((p, i) => {
+        if (p.x < ship.x + ship.width && p.x + p.width > ship.x &&
+            p.y < ship.y + ship.height && p.y + p.height > ship.y) {
+          if (p.type === "life") {
+            lives++;
+            if (soundOn) powerSound.play();
+            powerUps.splice(i, 1);
+          }
+        }
+      });
+
+      bullets.forEach((b) => {
+        enemies.forEach((e) => {
+          if (
+            e.alive &&
+            b.x < e.x + e.width &&
+            b.x + b.width > e.x &&
+            b.y < e.y + e.height &&
+            b.y + b.height > e.y
+          ) {
+            if (e.type === 'boss') {
+              e.health = (e.health || 3) - 1;
+              if (e.health <= 0) e.alive = false;
+            } else {
+              e.alive = false;
+            }
+            if (Math.random() < 0.1) spawnPowerUp(e.x + e.width / 2, e.y + e.height);
+            b.y = -10;
+            score += e.type === 'boss' ? 50 : 10;
+            if (soundOn) {
+              hitSound.currentTime = 0;
+              hitSound.play();
+            }
+          }
+        });
+      });
+
+      if (enemies.some(e => e.alive && e.y + e.height > ship.y)) {
+        lives--;
+        if (lives <= 0) {
+          gameOver = true;
+          scoreBoard.textContent = `GAME OVER - Final Score: ${score}`;
+          return;
+        } else {
+          createEnemies(5, 10);
+        }
+      }
+
+      if (enemies.every(e => !e.alive)) {
+        level++;
+        ship.speed += 0.5;
+        createEnemies(5, 10);
+      }
+
+      scoreBoard.textContent = `Score: ${score} | Level: ${level} | Lives: ${lives}`;
+    }
+
+    function drawShip() {
+      ctx.fillStyle = "lime";
+      ctx.fillRect(ship.x, ship.y, ship.width, ship.height);
+    }
+
+    function drawBullets() {
+      ctx.fillStyle = "white";
+      bullets.forEach((b) => ctx.fillRect(b.x, b.y, b.width, b.height));
+    }
+
+    function drawEnemies() {
+      enemies.forEach((e) => {
+        if (e.alive) {
+          ctx.fillStyle = e.type === 'boss' ? 'purple' : 'red';
+          ctx.fillRect(e.x, e.y, e.width, e.height);
+        }
+      });
+    }
+
+    function drawPowerUps() {
+      ctx.fillStyle = 'yellow';
+      powerUps.forEach(p => ctx.fillRect(p.x, p.y, p.width, p.height));
+    }
+
+    function gameLoop() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      update();
+      drawShip();
+      drawBullets();
+      drawEnemies();
+      drawPowerUps();
+      if (!gameOver) requestAnimationFrame(gameLoop);
+    }
+
+    gameLoop();
+  </script>
 </body>
 </html>
