--- a/index.html
+++ b/index.html
@@ -2,18 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Blocky Jump</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bagheera the Cat</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Blocky Jump</h1>
-  <h2>jumping sound effect by corpocracy from freesound.org</h2>
-  <div id="gameContainer">
-    <div id="block"></div>
-    <div id="score">Score: 0</div>
-  </div>
-  <div id="gameOver">Game Over<br><button onclick="restartGame()">Restart</button></div>
-  <script src="script.js"></script>
+  <header>
+    <h1>Meet Bagheera 🐈‍⬛</h1>
+    <p>The sleek, mysterious, and lovable feline</p>
+  </header>
+
+  <main>
+    <section class="about">
+      <h2>About Bagheera</h2>
+      <p>Bagheera is a majestic black cat who loves to nap in sunbeams, talk to birds, and steps on tv remote.</p>
+      <p>Named after the panther from *The Jungle Book*, she’s just as graceful and clever — with a bit more sass.</p>
+    </section>
+
+    <section class="favorites">
+      <h2>Bagheera's Favorites</h2>
+      <ul>
+        <li>Favorite toy: A laser pointer</li>
+        <li>Favorite food: Tuna (but only the fancy kind)</li>
+        <li>Favorite spot: Top of the couch</li>
+        <li>Activity: Midnight Mice hunting</li>
+      </ul>
+    </section>
+
+    <section class="gallery">
+      <h2>Photo Gallery</h2>
+      <img src="bagheera1.jpg" alt="Bagheera looking majestic" />
+      <img src="bagheera2.jpg" alt="Bagheera sleeping peacefully" />
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Bagheera's Human. All rights reserved.</p>
+  </footer>
 </body>
 </html>
